# gst-sscma-yolov5

./: meson.build  readme.md
src/: gstsscmayolov5.c  gstsscmayolov5.cc  gstsscmayolov5.h  tensor_info.c  tensor_info.cc  tensor_info.h
